Edit nginx conf to pass URLs to React Router instead of 404

--- a/oidc_nginx.conf
+++ b/oidc_nginx.conf
@@ -36,7 +36,7 @@ server {
         #
         # include snippets/snakeoil.conf;
 
-        root /root/mit-oidc-client/frontend/build/;
+        root /home/oidc/mit-oidc-client/frontend/build/;
 
         # Add index.php to the list if you are using PHP
         index index.html index.htm index.nginx-debian.html;
@@ -45,8 +45,8 @@ server {
 
         location / {
                 # First attempt to serve request as file, then
-                # as directory, then fall back to displaying a 404.
-                try_files $uri $uri/ =404;
+                # as directory, then fall back to serving index.html
+                try_files $uri /index.html;
         }
 
         # pass PHP scripts to FastCGI server
@@ -107,5 +107,6 @@ server {
 
 	server_name unofficial-oidc-client.xvm.mit.edu;
     return 404; # managed by Certbot
+
 
 }
