Bring out SERVER_HOST option to backend .env

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT=4000
+SERVER_HOST="localhost" #Change to "0.0.0.0" if you're not using a reverse proxy
 SSL_CRT_FILE="../cert/cert.pem"
 SSL_KEY_FILE="../cert/key.pem"
