Edit Nginx to proxy /api endpoint to backend server

--- a/oidc_nginx.conf
+++ b/oidc_nginx.conf
@@ -41,12 +41,21 @@ server {
         # Add index.php to the list if you are using PHP
         index index.html index.htm index.nginx-debian.html;
 
-	server_name unofficial-oidc-client.xvm.mit.edu;
+	    server_name unofficial-oidc-client.xvm.mit.edu;
 
         location / {
                 # First attempt to serve request as file, then
                 # as directory, then fall back to serving index.html
                 try_files $uri /index.html;
+        }
+
+        location /api {  
+            proxy_pass http://localhost:4000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade; 
         }
 
         # pass PHP scripts to FastCGI server
