--- a/oidc_nginx.conf
+++ b/oidc_nginx.conf
@@ -50,7 +50,7 @@ server {
         }
 
         location /api {  
-            proxy_pass http://localhost:4000;
+            proxy_pass https://localhost:4000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
