--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,9 @@
   },
   "homepage": "https://github.com/mit-oidc-client/mit-oidc-client#readme",
   "dependencies": {
+    "axios": "^1.3.6",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "form-data": "^4.0.0"
   }
 }
