--- a/backend/package.json
+++ b/backend/package.json
@@ -28,9 +28,10 @@
   },
   "homepage": "https://github.com/mit-oidc-client/mit-oidc-client#readme",
   "dependencies": {
-    "axios": "^1.3.6",
+    "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "form-data": "^4.0.0"
+    "form-data": "^4.0.0",
+    "jsonwebtoken": "^9.0.0"
   }
 }
