--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/mit-oidc-client/mit-oidc-client#readme",
   "dependencies": {
+    "@types/jwk-to-pem": "^2.0.1",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
