--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "jwk-to-pem": "^2.0.5"
   }
 }
