--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.34",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.4.0",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
