--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "express": "^4.18.2",
     "form-data": "^4.0.0",
     "jsonwebtoken": "^9.0.0",
-    "jwk-to-pem": "^2.0.5"
+    "jwk-to-pem": "^2.0.5",
+    "socket.io": "^4.6.1"
   }
 }
