--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@types/jwk-to-pem": "^2.0.1",
     "axios": "^1.4.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
