--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,15 @@
     "axios": "^1.4.0",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
+    "jsonwebtoken": "^9.0.0",
+    "jwk-to-pem": "^2.0.5",
+    "noble-ed25519": "^1.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "sha3": "^2.1.4",
     "typescript": "^4.9.5",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
@@ -46,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/jwk-to-pem": "^2.0.1"
   }
 }
