--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,58 +1,61 @@
 {
-  "name": "mit-oidc-client-frontend",
-  "description": "Unofficial frontend client template for MIT OpenID Connect (OIDC) service",
-  "version": "1.0.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.23",
-    "@types/react": "^18.0.34",
-    "@types/react-dom": "^18.0.11",
-    "axios": "^1.4.0",
-    "crypto-js": "^4.1.1",
-    "dotenv": "^16.0.3",
-    "jsonwebtoken": "^9.0.0",
-    "jwk-to-pem": "^2.0.5",
-    "noble-ed25519": "^1.2.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
-    "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1",
-    "sha3": "^2.1.4",
-    "typescript": "^4.9.5",
-    "universal-cookie": "^4.0.4",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/jwk-to-pem": "^2.0.1"
-  }
+    "name": "mit-oidc-client-frontend",
+    "description": "Unofficial frontend client template for MIT OpenID Connect (OIDC) service",
+    "version": "1.0.0",
+    "private": true,
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^27.5.2",
+        "@types/node": "^16.18.23",
+        "@types/react": "^18.0.34",
+        "@types/react-dom": "^18.0.11",
+        "axios": "^1.4.0",
+        "crypto": "npm:crypto-browserify",
+        "crypto-js": "^4.1.1",
+        "dotenv": "^16.0.3",
+        "jsonwebtoken": "^9.0.0",
+        "jwk-to-pem": "^2.0.5",
+        "noble-ed25519": "^1.2.6",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-icons": "^4.8.0",
+        "react-router-dom": "^6.10.0",
+        "react-scripts": "5.0.1",
+        "sha3": "^2.1.4",
+        "stream": "npm:stream-browserify",
+        "typescript": "^4.9.5",
+        "universal-cookie": "^4.0.4",
+        "util": "^0.12.5",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@types/jsonwebtoken": "^9.0.2",
+        "@types/jwk-to-pem": "^2.0.1"
+    }
 }
