--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,11 @@
         "@types/react": "^18.0.34",
         "@types/react-dom": "^18.0.11",
         "axios": "^1.4.0",
+        "buffer": "^6.0.3",
         "crypto": "npm:crypto-browserify",
         "crypto-js": "^4.1.1",
         "dotenv": "^16.0.3",
-        "jose": "^4.14.4",
-        "jsonwebtoken": "^9.0.0",
         "jwk-to-pem": "^2.0.5",
-        "noble-ed25519": "^1.2.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.8.0",
@@ -56,7 +54,6 @@
         ]
     },
     "devDependencies": {
-        "@types/jsonwebtoken": "^9.0.2",
         "@types/jwk-to-pem": "^2.0.1"
     }
 }
